--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^1.7.2",
+    "babel-loader": "^9.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh-webpack-plugin": "^0.1.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "webpack": "^5.91.0"
   },
   "scripts": {
     "start": "react-scripts start",
