--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-refresh-webpack-plugin": "^0.1.0",
-    "react-scripts": "^3.0.1",
-    "webpack": "^5.91.0"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
