--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "14": "^3.1.6",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -15,8 +16,8 @@
     "react-scripts": "^3.0.1"
   },
   "scripts": {
-    "start": "npm start",
-    "build": "npm run build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
